# AMS-400-P-Main

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md  ams.qrc
buildversion/: ToDo-New-Clone.txt  update_build_number.bat.dist
cmake/: CopyKDReports.cmake  CopyMySQLCAPI.cmake  CopyMySQLConnector.cmake  CopyOpenCV.cmake  CopyOpenSSL.cmake  CopyQXlsx.cmake  CopyQtDeployment.cmake  CopyUtils.cmake  CopyZXing.cmake  FindKDReports.cmake  FindLibSSH2.cmake  FindMariaDB.cmake  FindMySQLCAPI.cmake  FindMySQLConnector.cmake  FindMySQLCpp.cmake  FindOpenCV490.cmake  FindOpenSSL3.cmake  FindQXlsx.cmake  FindZXing.cmake
documentation/: UpdaterNotes.md  shortcuts.xlsx
packets/: QXlsx.7z
packets/mariadb/Debug/: libmariadb.lib  mariadbcpp.lib
resources/: bg_order_client.qrc  bg_order_system_resource.qrc
resources/Styles/: dark.json  light.json
resources/colors/: colors.txt
resources/licenses/kdreports/: git.txt
resources/licenses/openssl/: git.txt
resources/licenses/qlementine/: git.txt
resources/licenses/zxing/: git.txt
sql/ims/: rbac_ams_2026_01_30_01.sql
src/: AMS.APS  AMS.rc  RCa55032  RDa55032  resource.h
src/common/: Define.h
src/common/Cryptography/: Crypto.cpp  Crypto.h  FileCrypto.cpp  FileCrypto.h  FileKeyProvider.cpp  FileKeyProvider.h  FileStorageManager.cpp  FileStorageManager.h  MasterKeyStore.cpp  MasterKeyStore.h  NetworkSharePasswordStore.cpp  NetworkSharePasswordStore.h  PasswordStore.cpp  PasswordStore.h
src/common/Debugging/: CrashHandler.cpp  CrashHandler.h  CrashReport.cpp  CrashReport.h  Diagnostics.cpp  Diagnostics.h  Errors.cpp  Errors.h  WinStackTrace.cpp  WinStackTrace.h
src/common/File/: FileStorageService.cpp  FileStorageService.h  MimeTypeHelper.cpp  MimeTypeHelper.h
src/common/Network/: NetworkShareConnector.cpp  NetworkShareConnector.h  WeWiPacket.cpp  WeWiPacket.h
src/common/Threading/: ThreadWorker.h
src/common/Utilities/: ChangeTracker.h  ComboBoxDataLoader.cpp  ComboBoxDataLoader.h  CompanyLocationHandler.cpp  CompanyLocationHandler.h  CompilerDefs.h  CostUnitDataHandler.cpp  CostUnitDataHandler.h  Duration.h  GlobalSignals.cpp  GlobalSignals.h  LabelLayoutCalculator.cpp  LabelLayoutCalculator.h  MachineDataHandler.cpp  MachineDataHandler.h  MessageBoxHelper.cpp  MessageBoxHelper.h  OnScreenKeyboardWin.cpp  OnScreenKeyboardWin.h  TableHelper.h  TableSearchHelper.cpp  TableSearchHelper.h  ThreadHelper.cpp  ThreadHelper.h  TicketTokenizeUtil.h  TimeMgr.cpp  TimeMgr.h  TranslateMessageHelper.cpp  TranslateMessageHelper.h  TranslateText.cpp  TranslateText.h  UiChangeBinding.h  Util.cpp  Util.h  UtilsTouchKeyboard.cpp  UtilsTouchKeyboard.h  VersionExit.cpp  VersionExit.h
src/database/: AsyncExecutor.cpp  AsyncExecutor.h  ConnectionGuard.h  ConnectionPool.cpp  ConnectionPool.h  DatabaseConnection.cpp  DatabaseConnection.h  DatabaseHealth.cpp  DatabaseHealth.h  DatabaseManager.cpp  DatabaseManager.h  DatabaseTypes.h  Databases.h  Field.cpp  Field.h  MySQLPreparedStatements.cpp  MySQLPreparedStatements.h  PreparedStatement.cpp  PreparedStatement.h  PreparedStatementNames.h  PreparedStatementRegistry.cpp  PreparedStatementRegistry.h  QueryResult.cpp  QueryResult.h  SqlValidator.cpp  SqlValidator.h  VersionCheck.cpp  VersionCheck.h
src/database/Implementation/: AMSDatabase.cpp  AMSDatabase.h  IMSDatabase.cpp  IMSDatabase.h
src/database/ssh/: SshTunnel.cpp  SshTunnel.h
src/system/: MainFrame.cpp  MainFrame.h  ShutdownManager.cpp  ShutdownManager.h  main.cpp
src/system/CustomQT/: CollapsibleSection.cpp  CollapsibleSection.h  ContractorVisitLeftOverlayDelegate.cpp  ContractorVisitLeftOverlayDelegate.h  RichTextEditWithToolbar.h  SimpleBGDelegate.h  StepWidget.cpp  StepWidget.h  TicketAgeTextDelegate.cpp  TicketAgeTextDelegate.h  TicketColorDelegate.cpp  TicketColorDelegate.h  WordWrapItemDelegate.cpp  WordWrapItemDelegate.h
src/system/Delegate/: TicketColorAndWordWarpDelegate.cpp  TicketColorAndWordWarpDelegate.h  TicketSparePartsUsedActionDelegate.cpp  TicketSparePartsUsedActionDelegate.h
src/system/Handler/: ArticleManager.cpp  ArticleManager.h  AssetDataManager.cpp  AssetDataManager.h  CallerManager.cpp  CallerManager.h  CompanyContactDataManager.cpp  CompanyContactDataManager.h  ContractorVisitManager.cpp  ContractorVisitManager.h  ContractorVisitStatusManager.cpp  ContractorVisitStatusManager.h  ContractorWorkerDataManager.cpp  ContractorWorkerDataManager.h  CreateTicketManager.cpp  CreateTicketManager.h  EmployeeManager.cpp  EmployeeManager.h  MachineListManager.cpp  MachineListManager.h  ShowTicketDetailManager.cpp  ShowTicketDetailManager.h  ShowTicketManager.cpp  ShowTicketManager.h  SimilarReportManager.cpp  SimilarReportManager.h  SparePartUsedManager.cpp  SparePartUsedManager.h  TicketReportManager.cpp  TicketReportManager.h
src/system/LogData/: LogDataManager.cpp  LogDataManager.h
src/system/Logging/: BootstrapLogger.cpp  BootstrapLogger.h  CrashDumpRotator.h  Logger.cpp  Logger.h  LoggerDefines.h
src/system/Miscellaneous/: DatabaseDefines.h  SharedDefines.h  ShutdownManager.cpp  ShutdownManager.h  Version.h  build_version.h
src/system/ProxyModels/: CompanyContactProxyModel.cpp  CompanyContactProxyModel.h  ContractorVisitProxyModel.cpp  ContractorVisitProxyModel.h  ContractorWorkerProxyModel.cpp  ContractorWorkerProxyModel.h
src/system/RBAC/: AccessControl.cpp  AccessControl.h  PermissionRBAC.h  RBACAccess.cpp  RBACAccess.h  RBACVisibilityHelper.h
src/system/Settings/: SettingsManager.cpp  SettingsManager.h  SettingsMigrator.cpp  SettingsMigrator.h
src/system/Style/: StyleManager.cpp  StyleManager.h  TableViewAutoScroller.cpp  TableViewAutoScroller.h
src/system/TableModels/: ArticleDatabaseSearchModel.cpp  ArticleDatabaseSearchModel.h  AssignEmployeeTableModel.cpp  AssignEmployeeTableModel.h  CallerTableModel.cpp  CallerTableModel.h  CompanyContactTableModel.cpp  CompanyContactTableModel.h  ContractorVisitModel.cpp  ContractorVisitModel.h  ContractorVisitWorkerModel.cpp  ContractorVisitWorkerModel.h  ContractorWorkerTableModel.cpp  ContractorWorkerTableModel.h  (+24 more)
(+58 files in other folders)
